--- a/Bootcamp/Config/DefaultEngine.ini
+++ b/Bootcamp/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/NewWorld.NewWorld
-EditorStartupMap=/Game/NewWorld.NewWorld
+GameDefaultMap=/Game/NewMap.NewMap
+EditorStartupMap=/Game/NewMap.NewMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
